Changed the 'min-width' for the media query to avoid a resolution phase where the flex-direction made it to where the containers were being cut off. This delays the transition until larger resolutions, so that the content can be fully viewed within the webpage. Furthermore, changed the units for the media query to rem instead of px.

--- a/styles.scss
+++ b/styles.scss
@@ -104,7 +104,7 @@ body {
     }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 81.25rem) {
     body {
         display: flex;
         justify-content: center;
